--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.31</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
